test-cases/negative/test_037_describe_inside_describe.lay
# negative test: describe inside describe (nested)
# expected: should handle or error

describe 'outer suite'
  describe 'inner suite'
    test 'test'
      expect 5 is 5
    end test
  end describe
end describe


